Correccion de funciones asincronas

--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
             integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
             crossorigin="anonymous"
         />
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
+
         <header>
             <!-- place navbar here -->
         </header>
         <main>
-        <div id="video-container">
-
-        </div>
+            <div id="container"></div>
         </main>
         <footer>
             <!-- place footer here -->
@@ -42,6 +42,6 @@
             integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
             crossorigin="anonymous"
         ></script>
-        <script src="main.js"></script>
+        <script src="script.js"></script>
     </body>
 </html>
